# agents-cli

./: .npmignore  AGENTS.md  Cargo.toml  README.md  package.json
crates/agents-cli/: Cargo.toml
crates/agents-cli/src/: main.rs  main_tests.rs
crates/agents-cli/src/adtest/: mod.rs
crates/agents-cli/src/cleanup/: mod.rs
crates/agents-cli/src/compat/: mod.rs
crates/agents-cli/src/doctor/: cmd.rs  mod.rs  types.rs
crates/agents-cli/src/explnx/: mod.rs
crates/agents-cli/src/importr/: mod.rs
crates/agents-cli/src/initpr/: assets.rs  mod.rs
crates/agents-cli/src/initpr/assets/agent-pack/: manifest.yaml
crates/agents-cli/src/initpr/assets/agent-pack/adapters/claude/: adapter.yaml
crates/agents-cli/src/initpr/assets/agent-pack/adapters/codex/: adapter.yaml
crates/agents-cli/src/initpr/assets/agent-pack/adapters/copilot/: adapter.yaml
crates/agents-cli/src/initpr/assets/agent-pack/adapters/cursor/: adapter.yaml
crates/agents-cli/src/initpr/assets/agent-pack/adapters/opencode/: adapter.yaml
crates/agents-cli/src/initpr/assets/ci-safe/: manifest.yaml
crates/agents-cli/src/initpr/assets/common/modes/: default.md  readonly-audit.md
crates/agents-cli/src/initpr/assets/common/policies/: ci-safe.yaml  conservative.yaml  safe.yaml
crates/agents-cli/src/initpr/assets/common/prompts/: base.md  project.md
crates/agents-cli/src/initpr/assets/common/prompts/snippets/: example.md
crates/agents-cli/src/initpr/assets/common/schemas/: adapter.schema.json  mode-frontmatter.schema.json  scope.schema.json  skill.schema.json  state.schema.json
crates/agents-cli/src/initpr/assets/common/state/: .gitignore
crates/agents-cli/src/initpr/assets/conservative/: manifest.yaml
crates/agents-cli/src/initpr/assets/monorepo/: manifest.yaml
crates/agents-cli/src/initpr/assets/monorepo/scopes/: packages.yaml
crates/agents-cli/src/prevdf/: diff.rs  mod.rs  preview.rs
crates/agents-cli/src/runner/: mod.rs  registry.rs
crates/agents-cli/src/status/: command.rs  mod.rs  report.rs
crates/agents-cli/src/syncer/: mod.rs
crates/agents-cli/tests/: adtest.rs  claude.rs  clean.rs  cli.rs  compat.rs  copilot.rs  cursor.rs  diff.rs  doctor.rs  explain.rs  import.rs  init.rs  opencode.rs  preview.rs  run.rs  shared.rs  status.rs  support.rs  sync.rs
crates/agents-core/: Cargo.toml
crates/agents-core/src/: explain.rs  fsutil.rs  lib.rs
crates/agents-core/src/cleanup/: mod.rs
crates/agents-core/src/driftx/: compare.rs  diff.rs  mod.rs  stale.rs  types.rs
crates/agents-core/src/loadag/: error.rs  integrity.rs  loader.rs  mod.rs  repo_config.rs
crates/agents-core/src/matwiz/: materialize.rs  mod.rs  types.rs
crates/agents-core/src/model/: adapter.rs  ids.rs  manifest.rs  mod.rs  mode.rs  policy.rs  scope.rs  skill.rs  state.rs
crates/agents-core/src/outputs/: mod.rs  plan.rs  render.rs  types.rs
crates/agents-core/src/prompts/: compose.rs  mod.rs  types.rs
crates/agents-core/src/resolv/: mod.rs  resolve.rs  scope_match.rs  types.rs
crates/agents-core/src/schemas/: mod.rs  run.rs  validate.rs  validate_cmd.rs
crates/agents-core/src/shared/: mod.rs
crates/agents-core/src/skillpl/: mod.rs  planner.rs  types.rs
crates/agents-core/src/stamps/: apply.rs  drift.rs  encoding.rs  hash.rs  mod.rs  types.rs
crates/agents-core/src/templ/: engine.rs  helpers.rs  mod.rs  types.rs
crates/agents-core/src/vfsctr/: docker.rs  mod.rs  run.rs
crates/agents-core/src/vfsmnt/: mod.rs
crates/agents-core/tests/: drift.rs  driftx.rs  fsutil.rs  loadag.rs  matwiz.rs  models.rs  outputs_plan.rs  prompts.rs  resolv.rs  resolv_overlay.rs  schemas.rs  skillpl.rs  stamps.rs  templ_helpers.rs  templ_integration.rs  vfsctr.rs  vfsmnt.rs
crates/agents-core/tests/fixtures/schemas/invalid/.agents/: manifest.yaml
crates/agents-core/tests/fixtures/schemas/invalid/.agents/modes/: default.md
crates/agents-core/tests/fixtures/schemas/invalid/.agents/policies/: safe.yaml
crates/agents-core/tests/fixtures/schemas/invalid/.agents/schemas/: adapter.schema.json  manifest.schema.json  mode-frontmatter.schema.json
crates/agents-core/tests/fixtures/schemas/valid/.agents/policies/: safe.yaml
crates/agents-core/tests/fixtures/templ/minimal_adapter/templates/: hello.txt.hbs
fixtures/: README.md
(+122 files in other folders)
