[workspace]
members = [
  "crates/agents-cli",
  "crates/agents-core",
  "crates/agents-testutil",
]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.20.0"
ci = "github"
installers = ["npm", "homebrew", "shell", "powershell"]
npm-package-name = "agents"
pr-run-mode = "skip"
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]

[workspace.metadata.dist.homebrew]
tap = "agentsfolder/homebrew"
