[workspace]
members = [
  "crates/agents-cli",
  "crates/agents-core",
  "crates/agents-testutil",
]
resolver = "2"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
npm-package-name = "agents"
# Which actions to run on pull requests
pr-run-mode = "skip"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.homebrew]
tap = "agentsfolder/homebrew"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
