[package]
name = "agents-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "agents"
path = "src/main.rs"

[dependencies]
agents-core = { path = "../agents-core" }

clap = { version = "4.5.27", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

