[package]
name = "agents-cli"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentsfolder/agents-cli"
description = "Canonical .agents config to agent-native surfaces"
homepage = "https://github.com/agentsfolder/agents-cli"

[[bin]]
name = "agents"
path = "src/main.rs"

[dependencies]
agents-core = { path = "../agents-core" }
agents-testutil = { path = "../agents-testutil" }

clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.14.0"
