[package]
name = "agents-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
walkdir = "2.5.0"
tempfile = "3.14.0"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
jsonschema = "0.18.0"

[dev-dependencies]
tempfile = "3.14.0"

